Downgrade to Java 17 for more compatibility, remove old deprecated JE frame